import { describe, expect, test } from "bun:test";

import {
    createCliSandbox,
    createCliSnapshot,
    toRequest,
    writeAuthFile,
} from "../../../../__tests__/helpers.ts";

describe("skills search CLI", () => {
    test("supports skills search command with text output", async () => {
        const sandbox = await createCliSandbox();

        try {
            await writeAuthFile(sandbox);

            const requests: Request[] = [];
            const result = await sandbox.run(
                ["skills", "search", "text generation"],
                {
                    fetcher: async (input, init) => {
                        requests.push(toRequest(input, init));

                        return new Response(JSON.stringify({
                            data: [
                                {
                                    description: "Generate text using AI models",
                                    icon: "https://example.com/text-generation.png",
                                    name: "text-generation",
                                    owner: "0195f082-f87a-7772-80a9-9a2e4245d4d5",
                                    packageName: "@oomol/ai-tools",
                                    packageVersion: "1.0.0",
                                    title: "Text Generation",
                                    when: "Use this when the user asks for text generation.",
                                },
                            ],
                        }));
                    },
                },
            );

            expect(createCliSnapshot(result)).toMatchSnapshot();
            expect(result.exitCode).toBe(0);
            expect(result.stderr).toBe("");
            expect(result.stdout).toBe(
                [
                    "Text Generation (text-generation)",
                    "Generate text using AI models",
                    "Package: @oomol/ai-tools@1.0.0",
                    "",
                ].join("\n"),
            );
            expect(requests).toHaveLength(1);
            expect(requests[0]?.url).toBe(
                "https://search.oomol.com/v1/packages/-/skills-search?text=text+generation&size=5",
            );
            expect(requests[0]?.headers.get("Authorization")).toBe("secret-1");
        }
        finally {
            await sandbox.cleanup();
        }
    });

    test("supports skills find alias with json output and keywords", async () => {
        const sandbox = await createCliSandbox();

        try {
            await writeAuthFile(sandbox);

            const requests: Request[] = [];
            const result = await sandbox.run(
                ["skills", "find", "text generation", "--format=json", "--keywords=bar,baz"],
                {
                    fetcher: async (input, init) => {
                        requests.push(toRequest(input, init));

                        return new Response(JSON.stringify({
                            data: [
                                {
                                    description: "Generate text using AI models",
                                    icon: "https://example.com/text-generation.png",
                                    name: "text-generation",
                                    packageName: "@oomol/ai-tools",
                                    packageVersion: "1.0.0",
                                    title: "Text Generation",
                                },
                            ],
                        }));
                    },
                },
            );

            expect(createCliSnapshot(result)).toMatchSnapshot();
            expect(result.exitCode).toBe(0);
            expect(result.stderr).toBe("");
            expect(JSON.parse(result.stdout)).toEqual([
                {
                    description: "Generate text using AI models",
                    icon: "https://example.com/text-generation.png",
                    name: "text-generation",
                    packageName: "@oomol/ai-tools",
                    packageVersion: "1.0.0",
                    title: "Text Generation",
                },
            ]);
            expect(result.stdout).not.toContain("\"owner\"");
            expect(result.stdout).not.toContain("\"when\"");
            expect(requests).toHaveLength(1);
            expect(new URL(requests[0]!.url).searchParams.get("text")).toBe(
                "text generation",
            );
            expect(
                new URL(requests[0]!.url).searchParams.getAll("keywords"),
            ).toEqual(["bar", "baz"]);
            expect(new URL(requests[0]!.url).searchParams.get("size")).toBe("5");
        }
        finally {
            await sandbox.cleanup();
        }
    });

    test("validates the skills search format option", async () => {
        const sandbox = await createCliSandbox();

        try {
            const result = await sandbox.run(["skills", "search", "text", "--format=yaml"]);

            expect(createCliSnapshot(result)).toMatchSnapshot();
            expect(result.exitCode).toBe(2);
            expect(result.stdout).toBe("");
            expect(result.stderr).toBe("Invalid format: yaml. Use json.\n");
        }
        finally {
            await sandbox.cleanup();
        }
    });

    test("renders skills search help when text argument is omitted", async () => {
        const sandbox = await createCliSandbox();

        try {
            const expectedHelp = await sandbox.run(["skills", "search", "--help"]);
            const result = await sandbox.run(["skills", "search"]);

            expect({
                expectedHelp: createCliSnapshot(expectedHelp),
                result: createCliSnapshot(result),
            }).toMatchSnapshot();
            expect(result).toEqual(expectedHelp);
        }
        finally {
            await sandbox.cleanup();
        }
    });
});
